[package]
name = "fmac_test_websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"


[dependencies]
futures = "0.3"
futures-util = { version = "0.3.17", default-features = false, features = ["std", "sink"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.8"
actix = "0.13"
actix-web = "4"
actix-web-actors = "4.1"
awc = "3"
actix-rt = "2.7"
actix-codec = "0.5"
once_cell = "1.13"
rand = "0.8"
colored = "2"
